--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.rajan</groupId>
-	<artifactId>websocket-demo</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>Rello</artifactId>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>websocket-demo</name>
@@ -35,6 +35,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.tomcat.embed/tomcat-embed-jasper -->
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -44,6 +50,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>Rello</finalName>
 	</build>
 
 </project>
