--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-		<finalName>Rello</finalName>
+		<finalName>rello</finalName>
 	</build>
 
 </project>
