Refactor data initialization logging and update UI text; adjust CSS for chat layout

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -5,7 +5,7 @@ spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
 
 # JPA/Hibernate properties
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -14,7 +14,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # For initial setup, use create or create-drop, then switch to update
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 
 # After tables are created and application is stable, switch back to update
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
